@@ -234,7 +234,10 @@ comm_point_send_udp_msg(struct comm_point *c, ldns_buffer* packet,
 {
 	ssize_t sent;
 	log_assert(c->fd != -1);
-	log_assert(ldns_buffer_remaining(packet) > 0);
+#ifdef UNBOUND_DEBUG
+	if(ldns_buffer_remaining(packet) == 0)
+		log_err("internal error: send empty UDP packet");
+#endif
 	log_assert(addr && addrlen > 0);
 	sent = sendto(c->fd, ldns_buffer_begin(packet), 
 		ldns_buffer_remaining(packet), 0,
